bon/tests/integration/ui/compile_fail/attr_bon.rs
use bon::bon;

struct InvalidAttrsForBonMacro;

#[bon(attrs)]
impl InvalidAttrsForBonMacro {
    #[builder]
    fn sut() {}
}

fn main() {}
