bon/tests/integration/ui/compile_fail/attr_bon.stderr
error: `#[bon]` attribute does not accept any parameters yet, but it will in future releases
 --> tests/integration/ui/compile_fail/attr_bon.rs:5:7
  |
5 | #[bon(attrs)]
  |       ^^^^^
